...
  val scrollState = rememberScrollState()
  var isDefaultImageSelected by remember { mutableStateOf(false) }
  val context = LocalContext.current
  val networkManager = NetworkManager(context)
  var selectedImage by remember { mutableStateOf<Bitmap?>(null) }
  Scaffold(
      modifier = Modifier.testTag("editProfileScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Edit Profile", modifier = Modifier.testTag("editProfileTitle")) },
            colors =
                TopAppBarDefaults.topAppBarColors(
                    containerColor = Color(MAIN_COLOR_DARK),
                    titleContentColor = Color.White,
                    navigationIconContentColor = Color.White),
            navigationIcon = {
              IconButton(
                  modifier = Modifier.testTag("goBackButton"),
                  onClick = { navigationActions.goBack() }) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Back")
                  }
            })
...
          Column(
              modifier =
                  Modifier.fillMaxSize()
                      .padding(paddingValues)
                      .padding(MEDIUM_PADDING.dp)
                      .background(Color(MAIN_BACKGROUND))
                      .testTag("editProfileContent")
                      .verticalScroll(scrollState),
              verticalArrangement = Arrangement.spacedBy(STANDARD_PADDING.dp),
              horizontalAlignment = Alignment.CenterHorizontally, // Ensures horizontal centering
          ) {
            Spacer(modifier = Modifier.height(STANDARD_PADDING.dp))
            ProfileImage(
                userId = profile.id,
                modifier = Modifier.size(IMAGE_SIZE.dp).clip(CircleShape).testTag("profilePicture"),
                imageViewModel,
                editing = true,
                bitmap = selectedImage)
            Spacer(modifier = Modifier.padding(SMALL_PADDING.dp))
            if (isDefaultImageSelected) {
              DefaultImageCarousel(
                  onImageSelected = { bitmap ->
                    selectedImage = bitmap
                    isDefaultImageSelected = false
                  },
                  context = context,
                  onDismiss = { isDefaultImageSelected = false })
...
                      label = "Name",
                      validation = { input ->
                        if (input.isBlank()) "Name cannot be empty" else null
                      },
                      externalError = nameErrorState.value,
                      modifier = Modifier.weight(1f),
                      errorTestTag = "nameError",
                      testTag = "inputProfileName")
                  TextFieldWithErrorState(
                      value = surname,
                      onValueChange = { surname = it },
                      label = "Surname",
                      validation = { input ->
                        if (input.isBlank()) "Surname cannot be empty" else null
                      },
                      externalError = surnameErrorState.value,
                      modifier = Modifier.weight(1f),
                      errorTestTag = "surnameError",
                      testTag = "inputProfileSurname")
                }

            // Interest list and add button
            Spacer(modifier = Modifier.padding(STANDARD_PADDING.dp))

            var newListInterests by remember { mutableStateOf(interests ?: emptyList()) }
...
                              })
                        }
                      },
                      modifier =
                          Modifier.fillMaxWidth()
                              .height(AUTH_BUTTON_HEIGHT.dp)
                              .testTag("profileSaveButton"),
                      shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
                      colors =
                          ButtonDefaults.buttonColors(containerColor = Color(MAIN_COLOR_DARK))) {
                        Text("Save", fontSize = SUBTITLE_FONTSIZE.sp)
                      }
                }
...
                      newInterest = null
                      onUpdateInterests(updatedList)
                    }
                  })
            },
            enabled = newInterest != null,
            modifier = Modifier.testTag("addInterestButton"),
            shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
            colors = ButtonDefaults.buttonColors(containerColor = Color(MAIN_COLOR_DARK))) {
              Text("Add Interest")
            }
        // Interests List
        LazyRow(
...
                        value =
                            selectedCategory?.name
                                ?: context.getString(R.string.select_activity_category),
                        onValueChange = { selectedCategory = Category.valueOf(it) },
                        label = { Text("Category") },
                        readOnly = true,
                        modifier = Modifier.menuAnchor().testTag("categoryDropdown"),
                        colors =
                            TextFieldDefaults.colors(
                                focusedContainerColor = Color.Transparent,
                                unfocusedContainerColor = Color.Transparent,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent,
...
                    OutlinedTextField(
                        value =
                            selectedInterest ?: context.getString(R.string.select_activity_type),
                        onValueChange = { selectedInterest = it },
                        label = { Text("Interest") },
                        readOnly = true,
                        modifier = Modifier.menuAnchor().testTag("interestDropdown"),
                        colors =
                            TextFieldDefaults.colors(
                                focusedContainerColor = Color.Transparent,
                                unfocusedContainerColor = Color.Transparent,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent,
...
      }
}

@Composable
fun ModifyPictureButton(
    showDialogImage: () -> Unit,
    modifier: Modifier = Modifier.testTag("uploadPicture")
) {
  Box(
      modifier =
          modifier
              .clickable { showDialogImage() } // Handle click action
              .padding(MEDIUM_PADDING.dp)
...
