...
val interestStringValues =
    mapOf(
        categories[0] to
            listOf( // Sport
                "Basketball",
                "Cycling",
                "Football",
                "Running",
                "Swimming",
                "Tennis",
                "Volleyball",
                "Yoga",
                "Other sports"),
        categories[1] to
            listOf( // Culture
                "Art", "History", "Science", "Travel", "Other culture"),
        categories[2] to
            listOf( // Skills
                "Cooking",
                "Dancing",
                "Programming",
                "Writing",
...
